# polygonal-contour-approximation

./: CMakeLists.txt  Project Documentation.docx  README.md  main.cpp
docs/: implementation_comments.md  project_documentation.md
src/: lab11.cpp  lab11.h
